[gd_scene load_steps=23 format=2]

[ext_resource path="res://addons/FontAwesome5/fa-solid-900.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://assets/fonts/ubuntu-font-family/Ubuntu-L.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Background.tscn" type="PackedScene" id=3]
[ext_resource path="res://element_icon_help_panel.tscn" type="PackedScene" id=4]
[ext_resource path="res://addons/FontAwesome5/FontAwesome.gd" type="Script" id=5]
[ext_resource path="res://PanelHelp.tres" type="StyleBox" id=6]
[ext_resource path="res://assets/dpad_ud.png" type="Texture" id=7]
[ext_resource path="res://new_theme_ buttons lists.tres" type="Theme" id=8]
[ext_resource path="res://assets/no_cover.jpg" type="Texture" id=9]
[ext_resource path="res://assets/dpad_lr.png" type="Texture" id=11]
[ext_resource path="res://element_btn_min_close_win.tscn" type="PackedScene" id=12]
[ext_resource path="res://ScrGamesList_listmode.gd" type="Script" id=13]

[sub_resource type="DynamicFont" id=1]
size = 29
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 58
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxLine" id=3]
color = Color( 1, 1, 1, 0.560784 )
grow_begin = 0.0
grow_end = 0.0
vertical = true

[sub_resource type="ImageTexture" id=9]

[sub_resource type="StyleBoxEmpty" id=11]

[sub_resource type="DynamicFont" id=4]
size = 35
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="Animation" id=5]
resource_name = "change_to_left"
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("ControlSection:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 86.5, 0 ), Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ControlSection:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.4 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ "prev" ],
"method": "load_system_data"
} ]
}
tracks/3/type = "method"
tracks/3/path = NodePath("TimerToShowWallpaper")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.6 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ -1 ],
"method": "start"
} ]
}

[sub_resource type="Animation" id=6]
resource_name = "change_to_right"
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("ControlSection:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( -86.5, 0 ), Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ControlSection:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.4 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ "next" ],
"method": "load_system_data"
} ]
}
tracks/3/type = "method"
tracks/3/path = NodePath("TimerToShowWallpaper")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.6 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ -1 ],
"method": "start"
} ]
}

[sub_resource type="Animation" id=7]
length = 5.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("ControlEmuExec/FontAwesome:rect_rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 360.0 ]
}

[sub_resource type="DynamicFont" id=12]
size = 89
font_data = ExtResource( 1 )

[node name="ScrGamesList_listnode" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 8 )
script = ExtResource( 13 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" parent="." instance=ExtResource( 3 )]

[node name="GameBG" type="TextureRect" parent="."]
self_modulate = Color( 0.533333, 0.533333, 0.533333, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
expand = true
stretch_mode = 7
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LblTitleEmu" type="Label" parent="."]
margin_left = 22.0
margin_top = 15.0
margin_right = 352.0
margin_bottom = 49.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 0.635294 )
text = "FunEmuStation Launcher v1.5"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ControlSection" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TitleEmu" type="MarginContainer" parent="ControlSection"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 63.0
margin_bottom = -569.0
grow_vertical = 0
size_flags_horizontal = 0
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBx" type="VBoxContainer" parent="ControlSection/TitleEmu"]
margin_left = 20.0
margin_top = 20.0
margin_right = 1346.0
margin_bottom = 116.0
custom_constants/separation = 8

[node name="HBx" type="HBoxContainer" parent="ControlSection/TitleEmu/VBx"]
margin_left = 671.0
margin_right = 1326.0
margin_bottom = 66.0
size_flags_horizontal = 8
custom_constants/separation = 20
alignment = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name" type="Label" parent="ControlSection/TitleEmu/VBx/HBx"]
margin_right = 361.0
margin_bottom = 66.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 0.501961 )
custom_constants/shadow_offset_x = 2
custom_constants/shadow_offset_y = 2
text = "NameConsole"

[node name="VSeparator" type="VSeparator" parent="ControlSection/TitleEmu/VBx/HBx"]
margin_left = 381.0
margin_right = 385.0
margin_bottom = 66.0
custom_styles/separator = SubResource( 3 )

[node name="NumGames" type="Label" parent="ControlSection/TitleEmu/VBx/HBx"]
margin_left = 405.0
margin_right = 655.0
margin_bottom = 66.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 0.501961 )
custom_constants/shadow_offset_x = 2
custom_constants/shadow_offset_y = 2
text = "99 juegos"

[node name="HSlider" type="HSlider" parent="ControlSection/TitleEmu/VBx"]
modulate = Color( 1, 1, 1, 0.576471 )
margin_top = 74.0
margin_right = 1326.0
margin_bottom = 90.0
custom_icons/grabber_disabled = SubResource( 9 )
editable = false
scrollable = false

[node name="ControlList" type="Control" parent="ControlSection"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -684.0
margin_top = -171.0
margin_right = 685.0
margin_bottom = 267.0
mouse_filter = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Scrll" type="ScrollContainer" parent="ControlSection/ControlList"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 422.0
margin_top = -29.0
margin_right = -37.0
margin_bottom = 17.0
mouse_filter = 1
follow_focus = true
scroll_horizontal_enabled = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Margin" type="MarginContainer" parent="ControlSection/ControlList/Scrll"]
margin_right = 910.0
size_flags_horizontal = 3
custom_constants/margin_right = 15

[node name="VBxRoms" type="VBoxContainer" parent="ControlSection/ControlList/Scrll/Margin"]
margin_right = 895.0
size_flags_horizontal = 3
custom_constants/separation = 10

[node name="Cover" type="PanelContainer" parent="ControlSection/ControlList"]
margin_left = 57.0
margin_right = 372.0
margin_bottom = 420.0
custom_styles/panel = SubResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Img1" type="TextureRect" parent="ControlSection/ControlList/Cover"]
margin_right = 315.0
margin_bottom = 420.0
rect_min_size = Vector2( 315, 420 )
size_flags_horizontal = 0
size_flags_vertical = 0
texture = ExtResource( 9 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="PanelHelp" type="PanelContainer" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -82.0
custom_styles/panel = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="PanelHelp"]
margin_top = 1.0
margin_right = 1366.0
margin_bottom = 82.0
custom_constants/margin_right = 20
custom_constants/margin_left = 20

[node name="HBoxContainer" type="HBoxContainer" parent="PanelHelp/MarginContainer"]
margin_left = 20.0
margin_right = 1346.0
margin_bottom = 81.0
custom_constants/separation = 50

[node name="A" type="HBoxContainer" parent="PanelHelp/MarginContainer/HBoxContainer"]
margin_right = 159.0
margin_bottom = 81.0
custom_constants/separation = 6

[node name="element_icon_help_panel" parent="PanelHelp/MarginContainer/HBoxContainer/A" instance=ExtResource( 4 )]
margin_right = 72.0
margin_bottom = 81.0

[node name="Label" type="Label" parent="PanelHelp/MarginContainer/HBoxContainer/A"]
margin_left = 78.0
margin_top = 20.0
margin_right = 159.0
margin_bottom = 60.0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 0.729412 )
custom_constants/shadow_offset_x = 1
custom_constants/shadow_offset_y = 2
text = "PLAY"
align = 1
valign = 1

[node name="B" type="HBoxContainer" parent="PanelHelp/MarginContainer/HBoxContainer"]
margin_left = 209.0
margin_right = 373.0
margin_bottom = 81.0
custom_constants/separation = 6

[node name="element_icon_help_panel" parent="PanelHelp/MarginContainer/HBoxContainer/B" instance=ExtResource( 4 )]
margin_right = 72.0
margin_bottom = 81.0
action = "ui_cancel"

[node name="Label" type="Label" parent="PanelHelp/MarginContainer/HBoxContainer/B"]
margin_left = 78.0
margin_top = 20.0
margin_right = 164.0
margin_bottom = 60.0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 0.729412 )
custom_constants/shadow_offset_x = 1
custom_constants/shadow_offset_y = 2
text = "BACK"
align = 1
valign = 1

[node name="HBoxContainer2" type="HBoxContainer" parent="PanelHelp/MarginContainer"]
margin_left = 20.0
margin_right = 1346.0
margin_bottom = 81.0
custom_constants/separation = 50
alignment = 2

[node name="UD" type="HBoxContainer" parent="PanelHelp/MarginContainer/HBoxContainer2"]
margin_left = 783.0
margin_right = 1015.0
margin_bottom = 81.0
custom_constants/separation = 6

[node name="Spr" type="TextureRect" parent="PanelHelp/MarginContainer/HBoxContainer2/UD"]
margin_right = 65.0
margin_bottom = 81.0
rect_min_size = Vector2( 65, 0 )
texture = ExtResource( 7 )
expand = true
stretch_mode = 6

[node name="Label" type="Label" parent="PanelHelp/MarginContainer/HBoxContainer2/UD"]
margin_left = 71.0
margin_top = 20.0
margin_right = 232.0
margin_bottom = 60.0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 0.729412 )
custom_constants/shadow_offset_x = 1
custom_constants/shadow_offset_y = 2
text = "NAVIGATE"
align = 1
valign = 1

[node name="LR" type="HBoxContainer" parent="PanelHelp/MarginContainer/HBoxContainer2"]
margin_left = 1065.0
margin_right = 1326.0
margin_bottom = 81.0
custom_constants/separation = 6

[node name="Spr" type="TextureRect" parent="PanelHelp/MarginContainer/HBoxContainer2/LR"]
margin_right = 65.0
margin_bottom = 81.0
rect_min_size = Vector2( 65, 0 )
texture = ExtResource( 11 )
expand = true
stretch_mode = 6
__meta__ = {
"_editor_description_": ""
}

[node name="Label" type="Label" parent="PanelHelp/MarginContainer/HBoxContainer2/LR"]
margin_left = 71.0
margin_top = 20.0
margin_right = 261.0
margin_bottom = 60.0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 0.729412 )
custom_constants/shadow_offset_x = 1
custom_constants/shadow_offset_y = 2
text = "CHANGESYS"
align = 1
valign = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/change_to_left = SubResource( 5 )
anims/change_to_right = SubResource( 6 )
anims/wait = SubResource( 7 )

[node name="element_btn_min_close_win" parent="." instance=ExtResource( 12 )]
mouse_filter = 2

[node name="ControlEmuExec" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="ControlEmuExec"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0.0235294, 0.0941176, 0.745098 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="ControlEmuExec"]
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
custom_fonts/font = SubResource( 2 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 0.611765 )
custom_constants/shadow_offset_x = 3
custom_constants/shadow_offset_y = 2
text = "PLEASE_WAIT"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FontAwesome" type="Label" parent="ControlEmuExec"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -78.0
margin_top = -185.0
margin_right = 78.0
margin_bottom = -30.0
rect_pivot_offset = Vector2( 78, 77.5 )
custom_fonts/font = SubResource( 12 )
text = ""
align = 1
valign = 1
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}
icon_size = 89
icon_type = "solid"
icon_name = "circle-notch"

[node name="Timer" type="Timer" parent="."]
wait_time = 0.15
__meta__ = {
"_editor_description_": "timer para pasar entre elementos de lista mas rapidamente"
}

[node name="TimerToShowWallpaper" type="Timer" parent="."]
wait_time = 0.1
one_shot = true
__meta__ = {
"_editor_description_": "tiempo antes de mostrar el wallpaper"
}

[node name="TimerToStartEmu" type="Timer" parent="."]
one_shot = true

[node name="Tween" type="Tween" parent="."]
[connection signal="timeout" from="TimerToShowWallpaper" to="." method="_on_TimerToShowWallpaper_timeout"]
[connection signal="timeout" from="TimerToStartEmu" to="." method="_on_TimerToStartEmu_timeout"]
